# rustui

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
examples/: colors.rs  file_reader.rs  hello_world.rs  inputs.rs  welcome.rs
examples/tetris/: Cargo.toml
examples/tetris/src/: block.rs  core.rs  field.rs  main.rs
lib/: Cargo.toml
lib/src/: framebuffer.rs  input.rs  lib.rs  render.rs  term.rs  window.rs
src/: attr.rs  block.rs  color.rs  core.rs  field.rs  framebuffer.rs  input.rs  lib.rs  macros.rs  main.rs  render.rs  term.rs  window.rs
tests/: framebuffer_test.rs  term_test.rs
