[package]
name = "rustui"
version = "0.1.1"
authors = ["Broccolingual"]
description = "TUI library for Linux and Unix-like systems"
repository = "https://github.com/broccolingual/rustui"
license = "MIT"
keywords = ["curses", "terminal", "ui", "input"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2024"
categories = ["command-line-interface", "command-line-utilities"]

[lib]
name = "rustui"
path = "src/lib.rs"

[dependencies]
nix = { version = "0.30.1", features = ["term"] }
bitflags = "2.9.1"
rand = "0.9.2"

[[example]]
name = "tetris"
path = "examples/tetris/src/main.rs"
